<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Select person"
            android:id="@+id/textView"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Addresses"
            android:id="@+id/textView2"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/guideline4"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
    <ListView
            android:id="@+id/persons_list"
            android:choiceMode="singleChoice"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/add_person_btn"/>
    <ListView
            android:id="@+id/addresses_list"
            android:choiceMode="singleChoice"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintBottom_toTopOf="@+id/add_address_btn"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline4" app:layout_constraintGuide_percent="0.5"
                                          android:orientation="horizontal"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="Add person"
            android:ems="10"
            android:id="@+id/person_name" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/add_person_btn"
            app:layout_constraintTop_toTopOf="@+id/add_person_btn" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/add_person_btn"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="Add address"
            android:ems="10"
            android:id="@+id/person_address" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/add_address_btn"
            app:layout_constraintBottom_toBottomOf="@+id/add_address_btn"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/add_address_btn"/>
    <Button
            android:onClick="savePerson"
            android:text="Add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_person_btn" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/guideline4"/>
    <Button
            android:onClick="saveAddress"
            android:text="Add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_address_btn" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>